# chat

./: .env  .gitignore  ARCHITECTURE_UPGRADE_PROPOSAL.md  Dockerfile.backend  Dockerfile.frontend  INNOVATIVE_ARCH_V2.md  README.md  app.db  checkpoints.sqlite  debug_graph.py  debug_schema.py  docker-compose.yml  pyproject.toml  schema_cache.json  test.db
.github/workflows/: ci.yml
.matplotlib_cache/: fontlist-v390.json
.trae/documents/: Build FastAPI Backend and React Frontend.md  Build LangGraph Multi-Agent Demo (Supervisor Pattern).md  Business Meaningful Schema & UI Tree View Update.md  Debug and Fix Workflow Execution Issues.md  Diversified Business Domains Schema Generation.md  Enable User Manual Table Selection.md  Implement Hybrid Search and Context-Aware Table Selection.md  Implement Interactive Clarification with State Persistence.md  Implement Real-time Streaming of Thought Process.md  Implement SQL Retry Mechanism & Security Checks.md  Migrate to MySQL Database with Dynamic Schema Support.md  Migrate to PostgreSQL and Import DuSQL Dataset.md  Refactor to Text2SQL Agent with Modular Structure.md  Refactoring Plan_ Frontend Context, Backend DI, and Redis Optimization.md  Regenerate 1000 Tables with 100 Business Scenarios.md  Scale to 1000 Tables and Optimize Schema Selection.md  Separate Application DB and Query DB Architecture.md  SmallMo Chat V2.0 深度升级计划.md  SmallMo Chat V3.0 升级计划.md  SmallMo Chat V4.0 升级计划.md  SmallMo Chat V5.0 深度升级提案.md  SmallMo Chat 优化升级方案.md  Switch to Robust Streaming Architecture.md  Task Planning Page Optimization.md  Text2SQL Agent Upgrade_ Dynamic Planning & Advanced Capabilities.md  Update DB User to 'testdb' and Verify Connection.md  Upgrade Memory Architecture (Redis + Mem0_ChromaDB).md  修复 CORS 问题并进行中文化 (UI & 注释).md  新增数据源连接测试功能.md  移除默认数据库回退并实现数据源编辑功能.md  系统全维度升级方案 (V7.0).md  系统全维度升级方案 (V7.1).md  系统全维度升级方案 (V7.2).md  系统功能升级完成：多项目、多数据源与审计管理.md  系统功能升级计划：多项目与多数据源支持.md  系统安全加固与代码清理方案.md  系统性能优化方案 (Redis缓存 + 并行工作流).md  系统深度优化方案 (可观测性 + 稳定性).md  系统深度优化方案 (连接池化 + 前端懒加载).md
config/: glossary.yaml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: OPTIMIZATION_ROADMAP.md  architecture.mmd  schema_mapping.md
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  chatTypes.ts  config.ts  index.css  types.ts
migrations/mysql/: 20260108_alter_audit_logs.sql
scripts/: evaluate.py  fix_db_schema.py  locustfile.py  test_api_endpoints.py
scripts/k6/: chat.js
src/: graph.py  main.py  models.py  server.py
src/agents/: analysis.py  clarify.py  dsl2sql.py  execute.py  gen_dsl.py  planner.py  select_tables.py  supervisor.py  table_qa.py  visualization.py
src/api/: app.py  deps.py  schemas.py  schemas_llm.py
src/config/: column_mapping.json
src/core/: config.py  database.py  event_bus.py  llm.py  logging.py  mapping.py  metrics.py  models.py  redis_client.py  security.py  security_auth.py  sql_security.py
src/domain/: sandbox.py
src/eval/: evaluator.py  run.py
src/state/: state.py
src/utils/: callbacks.py  db.py  llm.py  memory.py  mysql_checkpoint.py  redis_saver.py  schema_search.py  security.py  simple_redis_saver.py  (+1 more)
tests/: conftest.py  evaluate.py  evaluate_accuracy.py  test_compiler_extract.py  test_dsl_precheck_and_mapping.py  test_query_download_stream_csv.py  test_quote_and_interval.py  test_schema_guard_dot_parsing.py  test_schema_guard_fallback.py  test_sql_safety.py  test_strip_db.py  test_supervisor_clarify_block.py  test_supervisor_downgrade_retry.py  verify_sessions.py
(+83 files in other folders)
